# go-gline-rs

./: .gitignore  Makefile  README.md  go.mod  go.sum
.github/workflows/: build.yml  bundle-libs.yml
cmd/gliner2-server/: main.go
cmd/mcp-server/: main.go
gline_binding/: Cargo.toml
gline_binding/src/: lib.rs
gliner2_binding/: Cargo.toml
gliner2_binding/src/: lib.rs
patches/: gliner2_inference-v0.5.1.patch
pkg/gline/: doc.go  download.go  gline.go  gline.h  gline_test.go  relation_model.go  types.go
pkg/gliner2/: gliner2.go  gliner2.h  gliner2_test.go  ort_providers.go  types.go
pkg/gliner2/lib/: README.md
scripts/: build_gliner2.sh  compile_rust_linux.sh  compile_rust_mac.sh  setup_gliner2_inference.sh
