[package]
name = "gline_binding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
# gline-rs = { path = "../../gline-rs" } # Assuming local for now or git? Use crates.io if available or git
gline-rs = "1.0.0"
tokio = { version = "1", features = ["rt", "macros"] }
orp = "0.9.2"
composable = "0.9.0"
zmij = "1.0.3"
csv = "1.3"
csv-core = "0.1"
